--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Calculator</title>
+    <script src="calc.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="calculator">
+      <form action="">
+        <input type="text" class="screen" />
+      </form>
+      <div class="buttons">
+        <button type="submit" class="btn btn-yellow" data-num="*">*</button>
+        <button type="submit" class="btn btn-yellow" data-num="/">/</button>
+        <button type="submit" class="btn btn-yellow" data-num="+">+</button>
+        <button type="submit" class="btn btn-yellow" data-num="-">-</button>
+
+        <button type="submit" class="btn btn-grey" data-num="9">9</button>
+        <button type="submit" class="btn btn-grey" data-num="8">8</button>
+        <button type="submit" class="btn btn-grey" data-num="7">7</button>
+        <button type="submit" class="btn btn-grey" data-num="6">6</button>
+        <button type="submit" class="btn btn-grey" data-num="5">5</button>
+        <button type="submit" class="btn btn-grey" data-num="4">4</button>
+        <button type="submit" class="btn btn-grey" data-num="3">3</button>
+        <button type="submit" class="btn btn-grey" data-num="2">2</button>
+        <button type="submit" class="btn btn-grey" data-num="1">1</button>
+        <button type="submit" class="btn btn-grey" data-num="0">0</button>
+        <button type="submit" class="btn btn-grey" data-num=".">.</button>
+
+        <button type="submit" class="btn btn-grey">=</button>
+        <button type="submit" class="btn btn-grey">C</button>
+      </div>
+    </section>
+  </body>
 </html>
