--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="buttons">
         <button type="submit" class="btn btn-yellow" data-num="*">*</button>
         <button type="submit" class="btn btn-yellow" data-num="/">/</button>
-        <button type="submit" class="btn btn-yellow" data-num="+">+</button>
         <button type="submit" class="btn btn-yellow" data-num="-">-</button>
+        <button type="submit" class="btn btn-yellow" data-num="+">+</button>
 
         <button type="submit" class="btn btn-grey" data-num="9">9</button>
         <button type="submit" class="btn btn-grey" data-num="8">8</button>
@@ -31,8 +31,8 @@
         <button type="submit" class="btn btn-grey" data-num="0">0</button>
         <button type="submit" class="btn btn-grey" data-num=".">.</button>
 
-        <button type="submit" class="btn btn-grey">=</button>
-        <button type="submit" class="btn btn-grey">C</button>
+        <button type="submit" class="btn btn-equal">=</button>
+        <button type="submit" class="btn btn-clear">C</button>
       </div>
     </section>
   </body>
